--- a/server/internal/static/styles/home.css
+++ b/server/internal/static/styles/home.css
@@ -1,14 +1,22 @@
 .book-list {
   display: grid;
+  justify-items: center;
   width: 80vw;
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-  row-gap: 1em;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  row-gap: 1.5em;
   column-gap: 0.5em;
+}
+
+.list-option {
+  display: flex;
+  width: 100%;
+  justify-content: end;
+  column-gap: 1rem;
 }
 
 .book {
   width: 100%;
-  height: 60%;
+  height: 70%;
   object-fit: cover;
   border-bottom: 1px solid #eee;
 }
@@ -24,4 +32,34 @@
   font-size: 0.9rem;
   color: #777;
   margin: 0;
+}
+
+@media (width >= 40rem) {
+  .book-list {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+}
+
+@media (width >= 48rem) {
+  .book-list {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (width >= 64rem) {
+  .book-list {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (width >= 80rem) {
+  .book-list {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
+
+@media (width >= 96rem) {
+  .book-list {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
 }
