--- a/server/internal/static/styles/root.css
+++ b/server/internal/static/styles/root.css
@@ -41,6 +41,7 @@ ol[role='list'] {
 body {
   min-height: 100vh;
   line-height: 1.5;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 /* Set shorter line heights on headings and interactive elements */
