--- a/server/internal/templates/index.html
+++ b/server/internal/templates/index.html
@@ -1,34 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/styles/root.css" />
+    <link rel="stylesheet" href="/static/styles/component.css" />
+    <link rel="stylesheet" href="/static/styles/home.css" />
 
-  <link rel="stylesheet" href="/static/styles/root.css">
-  <link rel="stylesheet" href="/static/styles/component.css">
-  <link rel="stylesheet" href="/static/styles/home.css">
+    <script src="/static/scripts/home.js" defer></script>
 
-  <title>Book Management</title>
-</head>
+    <title>Book Management</title>
+  </head>
 
-<body>
-  <header class="app-bar">
-    <a href="/" class="logo">Book Management</a>
-  </header>
-  <main class="container">
-    <section class="book-list">
-      {{ range .Data }}
-      <div class="card">
-        <img src="{{ .Image }}" alt="{{ .Title }}" class="book">
-        <div class="card-content">
-          <p class="book-title">{{ .Title }}</p>
-          <p class="book-author">{{ .Author }}</p>
+  <body>
+    <header class="app-bar">
+      <a href="/" class="logo">Book Listing</a>
+    </header>
+    <main class="container">
+      <div class="list-option">
+        <div>
+          Now Showing
+          <select name="showing" id="showing">
+            <option value="10">10</option>
+            <option value="20">20</option>
+            <option value="30">30</option>
+            <option value="40">40</option>
+            <option value="50">50</option>
+            <option value="unlimited">unlimited</option>
+          </select>
+        </div>
+        <div>
+          Sort by
+          <select name="sort" id="sort">
+            <option value="asc">A-Z</option>
+            <option value="desc">Z-A</option>
+          </select>
         </div>
       </div>
-      {{ end }}
-    </section>
-  </main>
-</body>
+      <section class="book-list">
+        {{ range .Books }}
+        <div class="card pointer" data-key="{{ .ID }}">
+          <img src="{{ .Image }}" alt="{{ .Title }}" class="book" />
+          <div class="card-content">
+            <p class="book-title">{{ .Title }}</p>
+            <p class="book-author">{{ .Author }}</p>
+          </div>
+        </div>
+        {{ end }}
+      </section>
+      <div class="pagination-options">
+        {{ if gt .Pagination.Page 1 }}
+        <a href="?page={{ sub .Pagination.Page 1 }}&limit={{ .Pagination.Limit }}&order={{ .Pagination.Order }}" class="pagination-btn">
+          Prev
+        </a>
+        {{ else }}
+        <span class="pagination-btn-disabled">Prev</span>
+        {{ end }}
 
+        {{ $page := $.Pagination.Page }}
+        {{ $total := $.Pagination.TotalPages }}
+
+        {{ if le $total 4 }}
+          {{ range $i := seq 1 $total }}
+            {{ if eq $i $page }}
+              <span class="pagination-btn-active">{{ $i }}</span>
+            {{ else }}
+              <a href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">
+                {{ $i }}
+              </a>
+            {{ end }}
+          {{ end }}
+        {{ else }}
+          {{ if le $page 3 }}
+            {{ range $i := seq 1 3 }}
+              {{ if eq $i $page }}
+                <span class="pagination-btn-active">{{ $i }}</span>
+              {{ else }}
+                <a href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">
+                  {{ $i }}
+                </a>
+              {{ end }}
+            {{ end }}
+            <span>...</span>
+            <a href="?page={{ $total }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">{{ $total }}</a>
+
+          {{ else if ge $page (sub $total 2) }}
+            <a href="?page=1&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">1</a>
+            <span>...</span>
+            {{ range $i := seq (sub $total 2) $total }}
+              {{ if eq $i $page }}
+                <span class="pagination-btn-active">{{ $i }}</span>
+              {{ else }}
+                <a href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">
+                  {{ $i }}
+                </a>
+              {{ end }}
+            {{ end }}
+
+          {{ else }}
+            <a href="?page=1&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">1</a>
+            <span>...</span>
+            {{ range $i := seq (sub $page 1) (add $page 1) }}
+              {{ if eq $i $page }}
+                <span class="pagination-btn-active">{{ $i }}</span>
+              {{ else }}
+                <a href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">
+                  {{ $i }}
+                </a>
+              {{ end }}
+            {{ end }}
+            <span>...</span>
+            <a href="?page={{ $total }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">{{ $total }}</a>
+          {{ end }}
+        {{ end }}
+
+
+        {{ if .Pagination.Next }}
+        <a href="?page={{ add .Pagination.Page 1 }}&limit={{ .Pagination.Limit }}&order={{ .Pagination.Order }}" class="pagination-btn">
+          Next
+        </a>
+        {{ else }}
+        <span class="pagination-btn-disabled">Next</span>
+        {{ end }}
+
+        <form method="get" class="go-to">
+          <span>Or go to</span>
+          <input type="number" name="page" min="1" max="{{ .Pagination.TotalPages }}" value="{{ .Pagination.Page }}" style="width:60px;">
+          <input type="hidden" name="limit" value="{{ .Pagination.Limit }}">
+          <input type="hidden" name="order" value="{{ .Pagination.Order }}">
+          <button type="submit">Go</button>
+        </form>
+      </div>
+    </main>
+    <button class="top-btn" id="goToTop" hidden>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="lucide lucide-arrow-up-icon lucide-arrow-up"
+      >
+        <path d="m5 12 7-7 7 7" />
+        <path d="M12 19V5" />
+      </svg>
+    </button>
+    <dialog class="dialog" id="bookDetail">
+      <div class="dialog-content">
+        <div class="dialog-image">
+          <img src="{{ .Selected.Image }}" alt="{{ .Selected.Title }}" />
+        </div>
+        <div class="dialog-info">
+          <h2>{{ .Selected.Title }}</h2>
+          <p>
+            <span class="font-semibold">Author:</span> {{ .Selected.Author }}
+          </p>
+          <p><span class="font-semibold">Genre:</span> {{ .Selected.Genre }}</p>
+          <p>
+            <span class="font-semibold">Description:</span> {{ .Selected.Description }}
+          </p>
+          <p><span class="font-semibold">ISBN:</span> {{ .Selected.ISBN }}</p>
+          <p>
+            <span class="font-semibold">Published:</span> {{ .Selected.Published }}
+          </p>
+          <p>
+            <span class="font-semibold">Publisher:</span> {{ .Selected.Publisher }}
+          </p>
+          <button id="closeDialog">Close</button>
+        </div>
+      </div>
+    </dialog>
+  </body>
 </html>
