--- a/server/internal/templates/index.html
+++ b/server/internal/templates/index.html
@@ -51,73 +51,84 @@
       </section>
       <div class="pagination-options">
         {{ if gt .Pagination.Page 1 }}
-        <a href="?page={{ sub .Pagination.Page 1 }}&limit={{ .Pagination.Limit }}&order={{ .Pagination.Order }}" class="pagination-btn">
+        <a
+          href="?page={{ sub .Pagination.Page 1 }}&limit={{ .Pagination.Limit }}&order={{ .Pagination.Order }}"
+          class="pagination-btn"
+        >
           Prev
         </a>
         {{ else }}
         <span class="pagination-btn-disabled">Prev</span>
-        {{ end }}
-
-        {{ $page := $.Pagination.Page }}
-        {{ $total := $.Pagination.TotalPages }}
-
-        {{ if le $total 4 }}
-          {{ range $i := seq 1 $total }}
-            {{ if eq $i $page }}
-              <span class="pagination-btn-active">{{ $i }}</span>
-            {{ else }}
-              <a href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">
-                {{ $i }}
-              </a>
-            {{ end }}
-          {{ end }}
+        {{ end }} {{ $page := $.Pagination.Page }} {{ $total := $.Pagination.TotalPages }} {{ if le $total 4 }} {{ range $i := seq 1 $total }} {{ if eq $i $page }}
+        <span class="pagination-btn-active">{{ $i }}</span>
         {{ else }}
-          {{ if le $page 3 }}
-            {{ range $i := seq 1 3 }}
-              {{ if eq $i $page }}
-                <span class="pagination-btn-active">{{ $i }}</span>
-              {{ else }}
-                <a href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">
-                  {{ $i }}
-                </a>
-              {{ end }}
-            {{ end }}
-            <span>...</span>
-            <a href="?page={{ $total }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">{{ $total }}</a>
+        <a
+          href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}"
+          class="pagination-btn"
+        >
+          {{ $i }}
+        </a>
+        {{ end }} {{ end }} {{ else }} {{ if le $page 3 }} {{ range $i := seq 1 3 }} {{ if eq $i $page }}
+        <span class="pagination-btn-active">{{ $i }}</span>
+        {{ else }}
+        <a
+          href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}"
+          class="pagination-btn"
+        >
+          {{ $i }}
+        </a>
+        {{ end }} {{ end }}
+        <span>...</span>
+        <a
+          href="?page={{ $total }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}"
+          class="pagination-btn"
+          >{{ $total }}</a
+        >
 
-          {{ else if ge $page (sub $total 2) }}
-            <a href="?page=1&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">1</a>
-            <span>...</span>
-            {{ range $i := seq (sub $total 2) $total }}
-              {{ if eq $i $page }}
-                <span class="pagination-btn-active">{{ $i }}</span>
-              {{ else }}
-                <a href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">
-                  {{ $i }}
-                </a>
-              {{ end }}
-            {{ end }}
-
-          {{ else }}
-            <a href="?page=1&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">1</a>
-            <span>...</span>
-            {{ range $i := seq (sub $page 1) (add $page 1) }}
-              {{ if eq $i $page }}
-                <span class="pagination-btn-active">{{ $i }}</span>
-              {{ else }}
-                <a href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">
-                  {{ $i }}
-                </a>
-              {{ end }}
-            {{ end }}
-            <span>...</span>
-            <a href="?page={{ $total }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}" class="pagination-btn">{{ $total }}</a>
-          {{ end }}
-        {{ end }}
-
-
-        {{ if .Pagination.Next }}
-        <a href="?page={{ add .Pagination.Page 1 }}&limit={{ .Pagination.Limit }}&order={{ .Pagination.Order }}" class="pagination-btn">
+        {{ else if ge $page (sub $total 2) }}
+        <a
+          href="?page=1&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}"
+          class="pagination-btn"
+          >1</a
+        >
+        <span>...</span>
+        {{ range $i := seq (sub $total 2) $total }} {{ if eq $i $page }}
+        <span class="pagination-btn-active">{{ $i }}</span>
+        {{ else }}
+        <a
+          href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}"
+          class="pagination-btn"
+        >
+          {{ $i }}
+        </a>
+        {{ end }} {{ end }} {{ else }}
+        <a
+          href="?page=1&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}"
+          class="pagination-btn"
+          >1</a
+        >
+        <span>...</span>
+        {{ range $i := seq (sub $page 1) (add $page 1) }} {{ if eq $i $page }}
+        <span class="pagination-btn-active">{{ $i }}</span>
+        {{ else }}
+        <a
+          href="?page={{ $i }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}"
+          class="pagination-btn"
+        >
+          {{ $i }}
+        </a>
+        {{ end }} {{ end }}
+        <span>...</span>
+        <a
+          href="?page={{ $total }}&limit={{ $.Pagination.Limit }}&order={{ $.Pagination.Order }}"
+          class="pagination-btn"
+          >{{ $total }}</a
+        >
+        {{ end }} {{ end }} {{ if .Pagination.Next }}
+        <a
+          href="?page={{ add .Pagination.Page 1 }}&limit={{ .Pagination.Limit }}&order={{ .Pagination.Order }}"
+          class="pagination-btn"
+        >
           Next
         </a>
         {{ else }}
@@ -126,9 +137,16 @@
 
         <form method="get" class="go-to">
           <span>Or go to</span>
-          <input type="number" name="page" min="1" max="{{ .Pagination.TotalPages }}" value="{{ .Pagination.Page }}" style="width:60px;">
-          <input type="hidden" name="limit" value="{{ .Pagination.Limit }}">
-          <input type="hidden" name="order" value="{{ .Pagination.Order }}">
+          <input
+            type="number"
+            name="page"
+            min="1"
+            max="{{ .Pagination.TotalPages }}"
+            value="{{ .Pagination.Page }}"
+            style="width: 60px"
+          />
+          <input type="hidden" name="limit" value="{{ .Pagination.Limit }}" />
+          <input type="hidden" name="order" value="{{ .Pagination.Order }}" />
           <button type="submit">Go</button>
         </form>
       </div>
@@ -171,7 +189,24 @@
           <p>
             <span class="font-semibold">Publisher:</span> {{ .Selected.Publisher }}
           </p>
-          <button id="closeDialog">Close</button>
+          <button id="closeDialog">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-circle-x-icon lucide-circle-x"
+            >
+              <circle cx="12" cy="12" r="10" />
+              <path d="m15 9-6 6" />
+              <path d="m9 9 6 6" />
+            </svg>
+          </button>
         </div>
       </div>
     </dialog>
